--- a/websoccer/templates/default/blocks/directtransfer-offer-form.twig
+++ b/websoccer/templates/default/blocks/directtransfer-offer-form.twig
@@ -29,10 +29,10 @@
 		
 		<dl class="dl-horizontal">
 		  <dt>{{ i18n.getMessage("entity_player_vertrag_gehalt") }}</dt>
-		  <dd>{{ player.player_contract_salary|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</dd>
+		  <dd>{{ player.player_contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</dd>
 		  
 		  <dt>{{ i18n.getMessage("entity_player_vertrag_torpraemie") }}</dt>
-		  <dd>{{ player.player_contract_goalbonus|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</dd>
+		  <dd>{{ player.player_contract_goalbonus|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</dd>
 		  
 		  <dt>{{ i18n.getMessage("entity_player_vertrag_spiele") }}</dt>
 		  <dd>{{ env.getConfig("transferoffers_contract_matches")  }} {{ i18n.getMessage("player_details_unit_matches") }}</dd>
