--- a/websoccer/templates/default/blocks/finances_summary.twig
+++ b/websoccer/templates/default/blocks/finances_summary.twig
@@ -12,10 +12,10 @@
 				</strong></td>
 				<td>
 					{% if majorPosition.balance < 0 %}<span style="color: red">{% endif %}
-					{{ majorPosition.balance|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}
+					{{ majorPosition.balance|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}
 					{% if majorPosition.balance < 0 %}</span>{% endif %}<br/>
 					(&empty; {% if majorPosition.avgAmount < 0 %}<span style="color: red">{% endif %}
-					{{ majorPosition.avgAmount|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}
+					{{ majorPosition.avgAmount|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}
 					{% if majorPosition.avgAmount < 0 %}</span>{% endif %})		
 				</td>
 			</tr>
