--- a/websoccer/templates/default/blocks/playerssearch-results.twig
+++ b/websoccer/templates/default/blocks/playerssearch-results.twig
@@ -9,31 +9,59 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th><abbr title="{{ i18n.getMessage("playertable_head_position") }}">{{ i18n.getMessage("playertable_head_position_abbr") }}</abbr></th>
-				<th>{{ i18n.getMessage("playertable_head_name") }}</th>
-				<th>{{ i18n.getMessage("entity_player_verein_id") }}</th>
+				<th><abbr title="{{ i18n.getMessage("playertable_head_position") }}"><i class="fa fa-spinner fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("playertable_head_name") }}"><i class="fa fa-user fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("playertable_head_age") }}"><i class="fa fa-refresh fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_verein_id") }}"><i class="fa fa-universal-access fa-lg"></i></abbr></th>
+
 				{% if env.getConfig("hide_strength_attributes") != "1" %}
-					<th>{{ i18n.getMessage("playertable_head_strength") }}</th>
+					<th><abbr title="{{ i18n.getMessage("playertable_head_zustand") }}"><i class="fa fa-bar-chart fa-lg"></i></abbr></th>
 				{% endif %}
-				<th>{{ i18n.getMessage("entity_player_vertrag_gehalt") }}</th>
-			</tr>
+				
+				<th><abbr title="{{ i18n.getMessage("entity_player_marktwert") }}"><i class="fa fa-area-chart fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_vertrag_gehalt") }}"><i class="fa fa-eur fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_sa_spiele") }}"><i class="fa fa-street-view fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_sa_tore") }}"><i class="fa fa-futbol-o fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_sa_assists") }}"><i class="fa fa-star fa-lg"></i></abbr></th>				
+				<th><abbr title="{{ i18n.getMessage("entity_player_note_last") }}"><i class="fa fa-cubes fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_note_schnitt") }}"><i class="fa fa-line-chart fa-lg"></i></abbr></th>				
+			</tr>			
 		</thead>
 		<tbody>
 		
 			{% for player in players %}
 			<tr>
-				<td>
-				<img src="{{ skin.getImage("icons/playertype_" ~ player.position ~ ".png") }}"
-					alt="{{ i18n.getMessage("player_position_" ~ player.position) }}" title="{{ i18n.getMessage("player_position_" ~ player.position) }}" />
-					{% if player.position_main|length > 0 %}<abbr title="{{ i18n.getMessage("option_" ~ player.position_main) }}">{{ i18n.getMessage("player_mainposition_" ~ player.position_main) }}</abbr>{% endif %}
-					{% if player.position_second|length > 0 %}/ <abbr title="{{ i18n.getMessage("option_" ~ player.position_second) }}">{{ i18n.getMessage("player_mainposition_" ~ player.position_second) }}</abbr>{% endif %}
+				<td style="text-align: center">
+					{% set nationImg = skin.getImage("flags/players/" ~ player.player_nationality_filename ~ ".png") %}
+					{% if i18n.hasMessage("option_" ~ player.player_nationality_filename) %}
+						{% set countryLabel = i18n.getMessage("option_" ~ player.player_nationality_filename) %}
+					{% endif %}
+					{% if (player.picture|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/player/{{ player.picture }}" class="img-rounded" width="50px" />
+					{% else %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/player/nobody.png" class="img-rounded" width="50px" />
+					{% endif %}
+					{% if nationImg %}<br /><img src="{{ nationImg }}" title="{{ countryLabel }}" alt="{{ countryLabel }}" />{% endif %}
+					<p title="{{ i18n.getMessage("option_" ~ player.position_main) }}">
+					{% if (player.position_main|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/positions/{{ i18n.getMessage("player_mainposition_" ~ player.position_main) }}.png" width="25px" />
+					{% endif %}
+					{% if (player.position_second|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/positions/{{ i18n.getMessage("player_secondposition_" ~ player.position_second) }}.png" width="25px" />
+					{% endif %}
+					</p>
 				</td>
-				<td><p><a href="{{ env.getInternalUrl("player", "id=" ~ player.id) }}">{{ player.firstname }} {% if player.pseudonym|length > 0 %}"{{ player.pseudonym }}" {% endif %}{{ player.lastname }}</a>
-				{% if player.unsellable %}
-					<i class="icon-eye-close" title="{{ i18n.getMessage("entity_player_unsellable") }}"></i>
-				{% elseif player.lending_owner_id == 0 and player.lending_fee > 0 and env.getConfig("lending_enabled") %}
-					<i class="icon-share-alt" title="{{ i18n.getMessage("lending_player_marker_lendable") }}"></i>
-				{% endif %}</p></td>
+				<td>
+					<p><a href="{{ env.getInternalUrl("player", "id=" ~ player.id) }}">{{ player.firstname }} {% if player.pseudonym|length > 0 %}"{{ player.pseudonym }}" {% endif %}{{ player.lastname }}</a>
+					{% if player.unsellable %}
+						<i class="icon-eye-close" title="{{ i18n.getMessage("entity_player_unsellable") }}"></i>
+					{% elseif player.lending_owner_id == 0 and player.lending_fee > 0 and env.getConfig("lending_enabled") %}
+						<i class="icon-share-alt" title="{{ i18n.getMessage("lending_player_marker_lendable") }}"></i>
+					{% endif %}
+					</p>
+				</td>
+
+				<td>{{ player.age }} Jahre</td>
 				<td>
 				{% if player.team_id > 0 %}
 				<a href="{{ env.getInternalUrl("team", "id=" ~ player.team_id) }}">{{ player.team_name }}</a>
@@ -48,19 +76,162 @@
 				
 				{% if env.getConfig("hide_strength_attributes") != "1" %}
 					<td>
+						{% if player.strength_freshness < 15 %}
+							{% set number_freshness = 22 %}
+						{% elseif player.strength_freshness < 20 %}
+							{% set number_freshness = 21 %}
+						{% elseif player.strength_freshness < 25 %}
+							{% set number_freshness = 20 %}
+						{% elseif player.strength_freshness < 30 %}
+							{% set number_freshness = 19 %}
+						{% elseif player.strength_freshness < 35 %}
+							{% set number_freshness = 18 %}							
+						{% elseif player.strength_freshness < 40 %}
+							{% set number_freshness = 17 %}
+						{% elseif player.strength_freshness < 45 %}
+							{% set number_freshness = 16 %}
+						{% elseif player.strength_freshness < 50 %}
+							{% set number_freshness = 15 %}
+						{% elseif player.strength_freshness < 55 %}
+							{% set number_freshness = 14 %}
+						{% elseif player.strength_freshness < 59 %}
+							{% set number_freshness = 13 %}
+						{% elseif player.strength_freshness < 63 %}
+							{% set number_freshness = 12 %}
+						{% elseif player.strength_freshness < 65 %}
+							{% set number_freshness = 11 %}
+						{% elseif player.strength_freshness < 69 %}
+							{% set number_freshness = 10 %}
+						{% elseif player.strength_freshness < 73 %}
+							{% set number_freshness = 9 %}
+						{% elseif player.strength_freshness < 76 %}
+							{% set number_freshness = 8 %}
+						{% elseif player.strength_freshness < 81 %}
+							{% set number_freshness = 7 %}
+						{% elseif player.strength_freshness < 86 %}
+							{% set number_freshness = 6 %}
+						{% elseif player.strength_freshness < 90 %}
+							{% set number_freshness = 5 %}
+						{% elseif player.strength_freshness < 94 %}
+							{% set number_freshness = 4 %}
+						{% elseif player.strength_freshness < 97 %}
+							{% set number_freshness = 3 %}
+						{% elseif player.strength_freshness < 100 %}
+							{% set number_freshness = 2 %}
+						{% else %}
+							{% set number_freshness = 1 %}
+						{% endif %}	
+
+						{% if player.strength_stamina < 15 %}
+							{% set number_stamina = 22 %}
+						{% elseif player.strength_stamina < 20 %}
+							{% set number_stamina = 21 %}
+						{% elseif player.strength_stamina < 25 %}
+							{% set number_stamina = 20 %}
+						{% elseif player.strength_stamina < 30 %}
+							{% set number_stamina = 19 %}
+						{% elseif player.strength_stamina < 35 %}
+							{% set number_stamina = 18 %}							
+						{% elseif player.strength_stamina < 40 %}
+							{% set number_stamina = 17 %}
+						{% elseif player.strength_stamina < 45 %}
+							{% set number_stamina = 16 %}
+						{% elseif player.strength_stamina < 50 %}
+							{% set number_stamina = 15 %}
+						{% elseif player.strength_stamina < 55 %}
+							{% set number_stamina = 14 %}
+						{% elseif player.strength_stamina < 59 %}
+							{% set number_stamina = 13 %}
+						{% elseif player.strength_stamina < 63 %}
+							{% set number_stamina = 12 %}
+						{% elseif player.strength_stamina < 65 %}
+							{% set number_stamina = 11 %}
+						{% elseif player.strength_stamina < 69 %}
+							{% set number_stamina = 10 %}
+						{% elseif player.strength_stamina < 73 %}
+							{% set number_stamina = 9 %}
+						{% elseif player.strength_stamina < 76 %}
+							{% set number_stamina = 8 %}
+						{% elseif player.strength_stamina < 81 %}
+							{% set number_stamina = 7 %}
+						{% elseif player.strength_stamina < 86 %}
+							{% set number_stamina = 6 %}
+						{% elseif player.strength_stamina < 90 %}
+							{% set number_stamina = 5 %}
+						{% elseif player.strength_stamina < 94 %}
+							{% set number_stamina = 4 %}
+						{% elseif player.strength_stamina < 97 %}
+							{% set number_stamina = 3 %}
+						{% elseif player.strength_stamina < 100 %}
+							{% set number_stamina = 2 %}
+						{% else %}
+							{% set number_stamina = 1 %}
+						{% endif %}	
+
+						{% if player.strength_satisfaction < 15 %}
+							{% set number_satisfaction = 22 %}
+						{% elseif player.strength_satisfaction < 20 %}
+							{% set number_satisfaction = 21 %}
+						{% elseif player.strength_satisfaction < 25 %}
+							{% set number_satisfaction = 20 %}
+						{% elseif player.strength_satisfaction < 30 %}
+							{% set number_satisfaction = 19 %}
+						{% elseif player.strength_satisfaction < 35 %}
+							{% set number_satisfaction = 18 %}							
+						{% elseif player.strength_satisfaction < 40 %}
+							{% set number_satisfaction = 17 %}
+						{% elseif player.strength_satisfaction < 45 %}
+							{% set number_satisfaction = 16 %}
+						{% elseif player.strength_satisfaction < 50 %}
+							{% set number_satisfaction = 15 %}
+						{% elseif player.strength_satisfaction < 55 %}
+							{% set number_satisfaction = 14 %}
+						{% elseif player.strength_satisfaction < 59 %}
+							{% set number_satisfaction = 13 %}
+						{% elseif player.strength_satisfaction < 63 %}
+							{% set number_satisfaction = 12 %}
+						{% elseif player.strength_satisfaction < 65 %}
+							{% set number_satisfaction = 11 %}
+						{% elseif player.strength_satisfaction < 69 %}
+							{% set number_satisfaction = 10 %}
+						{% elseif player.strength_satisfaction < 73 %}
+							{% set number_satisfaction = 9 %}
+						{% elseif player.strength_satisfaction < 76 %}
+							{% set number_satisfaction = 8 %}
+						{% elseif player.strength_satisfaction < 81 %}
+							{% set number_satisfaction = 7 %}
+						{% elseif player.strength_satisfaction < 86 %}
+							{% set number_satisfaction = 6 %}
+						{% elseif player.strength_satisfaction < 90 %}
+							{% set number_satisfaction = 5 %}
+						{% elseif player.strength_satisfaction < 94 %}
+							{% set number_satisfaction = 4 %}
+						{% elseif player.strength_satisfaction < 97 %}
+							{% set number_satisfaction = 3 %}
+						{% elseif player.strength_satisfaction < 100 %}
+							{% set number_satisfaction = 2 %}
+						{% else %}
+							{% set number_satisfaction = 1 %}
+						{% endif %}
+
 						<ul class="unstyled">
 							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_freshness") }}">{{ i18n.getMessage("playertable_head_strength_freshness_abbr") }}</abbr>:</span> 
-								<span {{ playerlists.strengthClass(player.strength_freshness) }}>{{ player.strength_freshness }}</span></li>
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_freshness }}.png" width="15px" /></li>
 							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_stamina") }}">{{ i18n.getMessage("playertable_head_strength_stamina_abbr") }}</abbr>:</span> 
-								<span {{ playerlists.strengthClass(player.strength_stamina) }}>{{ player.strength_stamina }}</span></li>
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_stamina }}.png" width="15px" /></li></li>
 							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_satisfaction") }}">{{ i18n.getMessage("playertable_head_strength_satisfaction_abbr") }}</abbr>:</span> 
-								<span {{ playerlists.strengthClass(player.strength_satisfaction) }}>{{ player.strength_satisfaction }}</span></li>
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_satisfaction }}.png" width="15px" /></li></li>
 						</ul>
 					</td>
 				{% endif %}
 				
-				<td>{{ player.contract_salary|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}<br>
-				{{ player.contract_matches }} {{ i18n.getMessage("contract_unit_matches") }}</td>
+				<td>{{ player.marketvalue|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ player.contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ player.st_matches }}</td>
+				<td>{{ player.st_goals }}</td>
+				<td>{{ player.st_assists }}</td>				
+				<td>{{ player.note_last }}</td>
+				<td>{{ player.note_schnitt }}</td>					
 			</tr>
 			{% endfor %}
 		
