--- a/websoccer/templates/default/blocks/transfer-bids-list.twig
+++ b/websoccer/templates/default/blocks/transfer-bids-list.twig
@@ -20,9 +20,9 @@
 					title="{% if bid.ishighest %}{{ i18n.getMessage("transfer_bids_ishighest") }}{% else %}{{ i18n.getMessage("transfer_bids_overbidden") }}{% endif %}"><i class="icon-hand-up"></i> {{ env.getFormattedDatetime(bid.date) }}</a></td>
 				<td><a href="{{ env.getInternalUrl("player", "id=" ~ bid.player_id) }}">{{ bid.player_firstname }} {{ bid.player_lastname }}</a></td>
 				<td>{{ env.getFormattedDatetime(bid.auction_end) }}</td>
-				<td>{{ bid.amount|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</td>
-				<td>{{ bid.hand_money|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</td>
-				<td>{{ bid.contract_salary|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ bid.amount|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ bid.hand_money|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ bid.contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
 			</tr>
 	  	{% endfor %}
 	  	
