--- a/websoccer/templates/default/blocks/userprofile.twig
+++ b/websoccer/templates/default/blocks/userprofile.twig
@@ -29,7 +29,7 @@
 {{ statisticelements.progressbar(profile.user_popularity) }}
 
 <p><em>{{ i18n.getMessage('userprofile_block_highscore') }}</em><br/>
-<a href="{{ env.getInternalUrl("highscore") }}">{{ profile.user_highscore|number_format(0, ',', ' ') }}</a></p>
+<a href="{{ env.getInternalUrl("highscore") }}">{{ profile.user_highscore|number_format(0, ',', '.') }}</a></p>
 
 {% if env.getUser().clubId > 0 %}
 <p><em>{{ i18n.getMessage('entity_club') }}</em>
@@ -61,12 +61,12 @@
 {% endif %}
 
 <p><em>{{ i18n.getMessage('entity_club_finanz_budget') }}</em><br/>
-<a href="{{ env.getInternalUrl("finances") }}">{{ userteam.team_budget|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}</a></p>
+<a href="{{ env.getInternalUrl("finances") }}">{{ userteam.team_budget|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}</a></p>
 {% endif %}
 
 {% if env.getConfig("premium_enabled") %}
 	<p><em>{{ i18n.getMessage('entity_users_premium_balance') }}</em><br/>
-	<a href="{{ env.getInternalUrl("premiumaccount") }}">{{ env.user.premiumBalance|number_format(0, ',', ' ') }} {{ env.getConfig("premium_credit_unit") }}</a></p>
+	<a href="{{ env.getInternalUrl("premiumaccount") }}">{{ env.user.premiumBalance|number_format(0, ',', '.') }} {{ env.getConfig("premium_credit_unit") }}</a></p>
 {% endif %}
 
 <p><i class="icon-off"></i> <a href="{{ env.getInternalActionUrl("logout") }}"> {{ i18n.getMessage('userprofile_block_link_logout') }}</a>
