--- a/websoccer/templates/default/layout.twig
+++ b/websoccer/templates/default/layout.twig
@@ -35,21 +35,24 @@
 		{% include 'navigationbar.twig' %}
 		{% endblock %}
 	
-		<div class="container">	
+		<div class="container" style="width: 1400px">
 		
 			{% block page_header %}
 			{% endblock %}
 		
 			{% block page_columns %}
 			<div class="row">
-				<div class="span8" id="contentArea">
+				<div class="span1"></div>
+				<div class="span10" id="contentArea">
 					<div class="box">
 					
 						{% include 'breadcrumb.twig' %}
 					
+						{% if env.getRequestParameter("page") != 'player' %}
 						<div class="page-header">
 						<h1>{{ block("page_title") }}</h1>
 						</div>
+						{% endif %}
 						
 						<div id="messages">
 						{% block messages_block %}
@@ -80,7 +83,7 @@
 					
 					</div>
 				</div>
-				<div class="span4">
+				<div class="span3">
 				
 					{% if blocks.sidebar is defined %}
 						{% for uiBlock in blocks.sidebar %}
