--- a/websoccer/templates/default/macros/playerlists.twig
+++ b/websoccer/templates/default/macros/playerlists.twig
@@ -3,10 +3,25 @@
 	{% import _self as playerlists %}
 
 			<tr>
-				<td><img src="{{ skin.getImage("icons/playertype_" ~ player.position ~ ".png") }}"
-					alt="{{ i18n.getMessage("player_position_" ~ player.position) }}" title="{{ i18n.getMessage("player_position_" ~ player.position) }}" />
-					{% if player.position_main|length > 0 %}<abbr title="{{ i18n.getMessage("option_" ~ player.position_main) }}">{{ i18n.getMessage("player_mainposition_" ~ player.position_main) }}</abbr>{% endif %}
-					{% if player.position_second|length > 0 %}/ <abbr title="{{ i18n.getMessage("option_" ~ player.position_second) }}">{{ i18n.getMessage("player_mainposition_" ~ player.position_second) }}</abbr>{% endif %}
+				<td style="text-align: center">
+					{% set nationImg = skin.getImage("flags/players/" ~ player.player_nationality_filename ~ ".png") %}
+					{% if i18n.hasMessage("option_" ~ player.player_nationality_filename) %}
+						{% set countryLabel = i18n.getMessage("option_" ~ player.player_nationality_filename) %}
+					{% endif %}
+					{% if (player.picture|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/player/{{ player.picture }}" class="img-rounded" width="50px" />
+					{% else %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/player/nobody.png" class="img-rounded" width="50px" />
+					{% endif %}
+					{% if nationImg %}<br /><img src="{{ nationImg }}" title="{{ countryLabel }}" alt="{{ countryLabel }}" />{% endif %}
+					<p title="{{ i18n.getMessage("option_" ~ player.position_main) }}">
+					{% if (player.position_main|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/positions/{{ i18n.getMessage("player_mainposition_" ~ player.position_main) }}.png" width="25px" />
+					{% endif %}
+					{% if (player.position_second|length > 0) %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/positions/{{ i18n.getMessage("player_secondposition_" ~ player.position_second) }}.png" width="25px" />
+					{% endif %}
+					</p>				
 				</td>
 				<td><a href="{{ env.getInternalUrl("player", "id=" ~ player.id) }}">{{ player.firstname }} {% if player.pseudonym|length > 0 %}"{{ player.pseudonym }}" {% endif %}{{ player.lastname }}</a>
 					{% if env.getRequestParameter("captain") == player.id %}
@@ -22,13 +37,165 @@
 					{% endif %}
 				</td>
 				
+				<td>{{ player.age }} Jahre</td>
+
 				{% if env.getConfig("hide_strength_attributes") != "1" %}
-				<td {{ playerlists.strengthClass(player.strength_freshness) }} title="{{ i18n.getMessage("playertable_head_strength_freshness") }}">{{ player.strength_freshness }}</td>
-				<td {{ playerlists.strengthClass(player.strength_stamina) }} title="{{ i18n.getMessage("playertable_head_strength_stamina") }}">{{ player.strength_stamina }}</td>
-				<td {{ playerlists.strengthClass(player.strength_satisfaction) }} title="{{ i18n.getMessage("playertable_head_strength_satisfaction") }}">{{ player.strength_satisfaction }}</td>
+					<td>
+						{% if player.strength_freshness < 15 %}
+							{% set number_freshness = 22 %}
+						{% elseif player.strength_freshness < 20 %}
+							{% set number_freshness = 21 %}
+						{% elseif player.strength_freshness < 25 %}
+							{% set number_freshness = 20 %}
+						{% elseif player.strength_freshness < 30 %}
+							{% set number_freshness = 19 %}
+						{% elseif player.strength_freshness < 35 %}
+							{% set number_freshness = 18 %}							
+						{% elseif player.strength_freshness < 40 %}
+							{% set number_freshness = 17 %}
+						{% elseif player.strength_freshness < 45 %}
+							{% set number_freshness = 16 %}
+						{% elseif player.strength_freshness < 50 %}
+							{% set number_freshness = 15 %}
+						{% elseif player.strength_freshness < 55 %}
+							{% set number_freshness = 14 %}
+						{% elseif player.strength_freshness < 59 %}
+							{% set number_freshness = 13 %}
+						{% elseif player.strength_freshness < 63 %}
+							{% set number_freshness = 12 %}
+						{% elseif player.strength_freshness < 65 %}
+							{% set number_freshness = 11 %}
+						{% elseif player.strength_freshness < 69 %}
+							{% set number_freshness = 10 %}
+						{% elseif player.strength_freshness < 73 %}
+							{% set number_freshness = 9 %}
+						{% elseif player.strength_freshness < 76 %}
+							{% set number_freshness = 8 %}
+						{% elseif player.strength_freshness < 81 %}
+							{% set number_freshness = 7 %}
+						{% elseif player.strength_freshness < 86 %}
+							{% set number_freshness = 6 %}
+						{% elseif player.strength_freshness < 90 %}
+							{% set number_freshness = 5 %}
+						{% elseif player.strength_freshness < 94 %}
+							{% set number_freshness = 4 %}
+						{% elseif player.strength_freshness < 97 %}
+							{% set number_freshness = 3 %}
+						{% elseif player.strength_freshness < 100 %}
+							{% set number_freshness = 2 %}
+						{% else %}
+							{% set number_freshness = 1 %}
+						{% endif %}	
+
+						{% if player.strength_stamina < 15 %}
+							{% set number_stamina = 22 %}
+						{% elseif player.strength_stamina < 20 %}
+							{% set number_stamina = 21 %}
+						{% elseif player.strength_stamina < 25 %}
+							{% set number_stamina = 20 %}
+						{% elseif player.strength_stamina < 30 %}
+							{% set number_stamina = 19 %}
+						{% elseif player.strength_stamina < 35 %}
+							{% set number_stamina = 18 %}							
+						{% elseif player.strength_stamina < 40 %}
+							{% set number_stamina = 17 %}
+						{% elseif player.strength_stamina < 45 %}
+							{% set number_stamina = 16 %}
+						{% elseif player.strength_stamina < 50 %}
+							{% set number_stamina = 15 %}
+						{% elseif player.strength_stamina < 55 %}
+							{% set number_stamina = 14 %}
+						{% elseif player.strength_stamina < 59 %}
+							{% set number_stamina = 13 %}
+						{% elseif player.strength_stamina < 63 %}
+							{% set number_stamina = 12 %}
+						{% elseif player.strength_stamina < 65 %}
+							{% set number_stamina = 11 %}
+						{% elseif player.strength_stamina < 69 %}
+							{% set number_stamina = 10 %}
+						{% elseif player.strength_stamina < 73 %}
+							{% set number_stamina = 9 %}
+						{% elseif player.strength_stamina < 76 %}
+							{% set number_stamina = 8 %}
+						{% elseif player.strength_stamina < 81 %}
+							{% set number_stamina = 7 %}
+						{% elseif player.strength_stamina < 86 %}
+							{% set number_stamina = 6 %}
+						{% elseif player.strength_stamina < 90 %}
+							{% set number_stamina = 5 %}
+						{% elseif player.strength_stamina < 94 %}
+							{% set number_stamina = 4 %}
+						{% elseif player.strength_stamina < 97 %}
+							{% set number_stamina = 3 %}
+						{% elseif player.strength_stamina < 100 %}
+							{% set number_stamina = 2 %}
+						{% else %}
+							{% set number_stamina = 1 %}
+						{% endif %}	
+
+						{% if player.strength_satisfaction < 15 %}
+							{% set number_satisfaction = 22 %}
+						{% elseif player.strength_satisfaction < 20 %}
+							{% set number_satisfaction = 21 %}
+						{% elseif player.strength_satisfaction < 25 %}
+							{% set number_satisfaction = 20 %}
+						{% elseif player.strength_satisfaction < 30 %}
+							{% set number_satisfaction = 19 %}
+						{% elseif player.strength_satisfaction < 35 %}
+							{% set number_satisfaction = 18 %}							
+						{% elseif player.strength_satisfaction < 40 %}
+							{% set number_satisfaction = 17 %}
+						{% elseif player.strength_satisfaction < 45 %}
+							{% set number_satisfaction = 16 %}
+						{% elseif player.strength_satisfaction < 50 %}
+							{% set number_satisfaction = 15 %}
+						{% elseif player.strength_satisfaction < 55 %}
+							{% set number_satisfaction = 14 %}
+						{% elseif player.strength_satisfaction < 59 %}
+							{% set number_satisfaction = 13 %}
+						{% elseif player.strength_satisfaction < 63 %}
+							{% set number_satisfaction = 12 %}
+						{% elseif player.strength_satisfaction < 65 %}
+							{% set number_satisfaction = 11 %}
+						{% elseif player.strength_satisfaction < 69 %}
+							{% set number_satisfaction = 10 %}
+						{% elseif player.strength_satisfaction < 73 %}
+							{% set number_satisfaction = 9 %}
+						{% elseif player.strength_satisfaction < 76 %}
+							{% set number_satisfaction = 8 %}
+						{% elseif player.strength_satisfaction < 81 %}
+							{% set number_satisfaction = 7 %}
+						{% elseif player.strength_satisfaction < 86 %}
+							{% set number_satisfaction = 6 %}
+						{% elseif player.strength_satisfaction < 90 %}
+							{% set number_satisfaction = 5 %}
+						{% elseif player.strength_satisfaction < 94 %}
+							{% set number_satisfaction = 4 %}
+						{% elseif player.strength_satisfaction < 97 %}
+							{% set number_satisfaction = 3 %}
+						{% elseif player.strength_satisfaction < 100 %}
+							{% set number_satisfaction = 2 %}
+						{% else %}
+							{% set number_satisfaction = 1 %}
+						{% endif %}
+											
+						<ul class="unstyled">
+							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_freshness") }}">{{ i18n.getMessage("playertable_head_strength_freshness_abbr") }}</abbr>:</span> 
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_freshness }}.png" width="15px" /></li>
+							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_stamina") }}">{{ i18n.getMessage("playertable_head_strength_stamina_abbr") }}</abbr>:</span> 
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_stamina }}.png" width="15px" /></li></li>
+							<li><span class="incell-strength-label"><abbr title="{{ i18n.getMessage("playertable_head_strength_satisfaction") }}">{{ i18n.getMessage("playertable_head_strength_satisfaction_abbr") }}</abbr>:</span> 
+								<img src="{{ env.getConfig("context_root") }}/uploads/strength/{{ number_satisfaction }}.png" width="15px" /></li></li>
+						</ul>
+					</td>
 				{% endif %}
-				
-				<td>{{ player.age }}</td>
+
+				<td>{{ player.marketvalue|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>			
+				<td>{{ player.st_matches }}</td>
+				<td>{{ player.st_goals }}</td>
+				<td>{{ player.st_assists }}</td>				
+				<td>{{ player.note_last }}</td>
+				<td>{{ player.note_schnitt }}</td>				
 				<td>
 				{% if player.matches_injured > 0 %}
 					<i class="icon-medkit" title="{{ i18n.getMessage("player_injured") }}"></i> {{ player.matches_injured }}
