--- a/websoccer/templates/default/views/borrow-player.twig
+++ b/websoccer/templates/default/views/borrow-player.twig
@@ -15,13 +15,13 @@
 <dl class="dl-horizontal">
 
   <dt>{{ i18n.getMessage("entity_player_marktwert") }}</dt>
-  <dd>{{ player.player_marketvalue|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</dd>
+  <dd>{{ player.player_marketvalue|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</dd>
 
   <dt>{{ i18n.getMessage("entity_player_vertrag_gehalt") }}</dt>
-  <dd>{{ player.player_contract_salary|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</dd>
+  <dd>{{ player.player_contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</dd>
   
   <dt>{{ i18n.getMessage("entity_player_vertrag_torpraemie") }}</dt>
-  <dd>{{ player.player_contract_goalbonus|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</dd>
+  <dd>{{ player.player_contract_goalbonus|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</dd>
   
   <dt>{{ i18n.getMessage("entity_player_vertrag_spiele") }}</dt>
   <dd>{{ player.player_contract_matches  }} {{ i18n.getMessage("player_details_unit_matches") }}</dd>
@@ -38,7 +38,7 @@
 			<strong>{{ i18n.getMessage("entity_player_lending_fee") }}</strong>
 		</label>
 		<div class="controls">
-			<span class="help-inline">{{ player.lending_fee|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</span>
+			<span class="help-inline">{{ player.lending_fee|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</span>
 		</div>
 	</div>
 	
