--- a/websoccer/templates/default/views/finances.twig
+++ b/websoccer/templates/default/views/finances.twig
@@ -8,7 +8,7 @@
 
 {% block page_content %}
 
-<h3>{{ i18n.getMessage("entity_club_finanz_budget") }}: {{ budget|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}</h3>
+<h3>{{ i18n.getMessage("entity_club_finanz_budget") }}: {{ budget|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}</h3>
 
 {% if statements is defined and statements|length > 0 %}
 
@@ -41,7 +41,7 @@
 			</td>
 			<td>
 				{% if statement.amount < 0 %}<span style="color: red">{% endif %}
-				{{ statement.amount|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}
+				{{ statement.amount|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}
 				{% if statement.amount < 0 %}</span>{% endif %}
 			</td>
 		</tr>
