--- a/websoccer/templates/default/views/formation_base.twig
+++ b/websoccer/templates/default/views/formation_base.twig
@@ -378,7 +378,7 @@
 										| {{ i18n.getMessage("player_details_statistic_goals") }}: {{ player.st_goals }}
 										| {{ i18n.getMessage("player_details_statistic_yellow") }}: {{ player.st_cards_yellow }}
 										{% if player.marketvalue is defined %}
-										| {{ i18n.getMessage("entity_player_marktwert") }}: {{ player.marketvalue|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}
+										| {{ i18n.getMessage("entity_player_marktwert") }}: {{ player.marketvalue|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}
 										{% endif %}
 									</small>
 									
