--- a/websoccer/templates/default/views/premiumaccount.twig
+++ b/websoccer/templates/default/views/premiumaccount.twig
@@ -8,7 +8,7 @@
 
 {% block page_content %}
 
-<h3>{{ i18n.getMessage("entity_users_premium_balance") }}: {{ env.user.premiumBalance|number_format(0, ',', ' ') }} {{ env.getConfig("premium_credit_unit") }}</h3>
+<h3>{{ i18n.getMessage("entity_users_premium_balance") }}: {{ env.user.premiumBalance|number_format(0, ',', '.') }} {{ env.getConfig("premium_credit_unit") }}</h3>
 
 <p>
 	<a href="{{ env.getInternalUrl(env.getConfig("premium_infopage")) }}" class="btn"><i class="icon-info-sign"></i> {{ i18n.getMessage("premiumaccount_recharge_button") }}</a>
@@ -41,7 +41,7 @@
 			</td>
 			<td>
 				{% if statement.amount < 0 %}<span style="color: red">{% endif %}
-				{{ statement.amount|number_format(0, ',', ' ') }} {{ env.getConfig("premium_credit_unit") }}
+				{{ statement.amount|number_format(0, ',', '.') }} {{ env.getConfig("premium_credit_unit") }}
 				{% if statement.amount < 0 %}</span>{% endif %}
 			</td>
 		</tr>
@@ -67,7 +67,7 @@
 		{% for payment in payments %}
 		<tr>
 			<td>{{ env.getFormattedDatetime(payment.created_date) }}</td>
-			<td>{{ payment.amount|number_format(0, ',', ' ') }} {{ env.getConfig("premium_currency") }}</td>
+			<td>{{ payment.amount|number_format(0, ',', '.') }} {{ env.getConfig("premium_currency") }}</td>
 		</tr>
 		{% endfor %}
 		</tbody>
