--- a/websoccer/templates/default/views/training.twig
+++ b/websoccer/templates/default/views/training.twig
@@ -121,7 +121,7 @@
 					<p>{{ premium.premiumbadge(trainer.premiumfee) }}</p>
 				{% endif %}
 				<p><a href="{{ env.getInternalUrl("trainer-details", "id=" ~ trainer.id) }}" class="btn"><i class="icon-hand-right"></i> {{ i18n.getMessage("button_choose") }}</a></p></td>
-				<td>{{ trainer.salary|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}</td>
+				<td>{{ trainer.salary|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}</td>
 				<td>{{ statisticelements.progressbar(trainer.p_technique) }}</td>
 				<td>{{ statisticelements.progressbar(trainer.p_stamina) }}</td>
 			</tr>
