--- a/websoccer/templates/default/views/trainingcamp.twig
+++ b/websoccer/templates/default/views/trainingcamp.twig
@@ -54,7 +54,7 @@
 				<tr>
 					<td><p>{{ camp.name }} ({{ camp.country }})</p>
 					<p><a href="{{ env.getInternalUrl("camp-details", "id=" ~ camp.id) }}" class="btn"><i class="icon-hand-right"></i> {{ i18n.getMessage("button_choose") }}</a></p></td>
-					<td>{{ camp.costs|number_format(0, ',', ' ') }} {{ env.getConfig("game_currency") }}</td>
+					<td>{{ camp.costs|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}</td>
 					<td>{{ camp.effect_strength_stamina }}</td>
 					<td>{{ camp.effect_strength_freshness }}</td>
 					<td>{{ camp.effect_strength_satisfaction }}</td>
