--- a/websoccer/templates/default/views/youth_scouting.twig
+++ b/websoccer/templates/default/views/youth_scouting.twig
@@ -44,7 +44,7 @@
 						<tr>
 							<td>{{ scout.name }}</td>
 							<td>{{ statisticelements.progressbar(scout.expertise) }}</td>
-							<td>{{ scout.fee|number_format(0, ',', ' ')  }} {{ env.getConfig("game_currency") }}</td>
+							<td>{{ scout.fee|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
 							<td>{% if scout.speciality|length %}{{ i18n.getMessage("option_" ~ scout.speciality) }}{% else %}-{% endif %}</td>
 							<td><a href="{{ env.getInternalUrl("youth-scouting", "scoutid=" ~ scout.id) }}" class="btn btn-small"><i class="icon-hand-right"></i> {{ i18n.getMessage("button_choose") }}</a></td>
 						</tr>
